fix layout align

--- a/app/globals.css
+++ b/app/globals.css
@@ -44,6 +44,9 @@ body {
 }
 main {
   margin: 2.5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
